Overflow fix

--- a/src/components/global/breadcrumbs/_breadcrumbs.scss
+++ b/src/components/global/breadcrumbs/_breadcrumbs.scss
@@ -1,5 +1,6 @@
 .breadcrumbs {
     margin-top: $gutter;
+    overflow: hidden;
 //    margin-bottom: 2 * $gutter;
 }
 
